of POE::Kernel::select_write, which should improve performance a
little bit.

POE::Kernel::call was setting $! to 0 when it oughtn't.  $! now
properly reflects the status of POE::Kernel::call.

Removed the place-holder test that suggested people trie the samples
directory.

Added t/01_sessions.t to test sessions (new and inline create) and
basic events (post and yield);

Added t/02_alarms.t to test delayed events (alarm, delay, alarm_add
and delay_add).

Tweaked the Win32 EINPROGRESS support to quietly turn itself off in
the case that ActiveState adds this constant to POSIX.pm.

Added POE::Kernel::(alarm|delay)_add to post additional alarms to a
particular state.  Unlike POE::Kernel::(alarm|delay), these don't
clear existing alarms for the destination state.


0.0907 2000.03.02
-----------------

Revised Wheel::SocketFactory's internal states to eliminate closures
keeping instances from self-destructing at proper times.  This would
keep socket factories alive after their last outside references were
removed.

Updated documentation for POE::Kernel::alarm()


0.0906 2000.02.20
-----------------

Revised Wheel::ReadWrite->put() to return true if the high watermark
is reached; false if it hasn't been.  ReadWrite->put() may return true
without a corresponding high or low watermark event.

Changed samples/watermarks.perl to use ReadWrite->put()'s return
value, as well as the high and low mark states.  Commented the program
while I was in it.

Adding the water mark code reintroduced the closure bug that was fixed
in version 0.0804.  Now it is fixed.  Yet again.

Changed how DEB_* are defined in POE::Kernel.  It's now possible to
override the debugging constants before the first POE::Kernel use.
This lets programs have access to POE::Kernel's debugging code without
requiring programmers to find Kernel.pm and edit it.

Fixed POE::Session's debugging constant to work like POE::Kernel's.

Documented POE::Kernel and POE::Session debugging flags in the
corresponding manpages.

